--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,9 @@
         <title>Laura MacKenzie CV</title>
         <link rel="stylesheet" href="styles/style.css"/>
         <a href="index.html">Home<br></a>
-        <a href="about/profile.html">Profile<br></a>
-        <a href="CoverLetter/coverletter.html">Cover Letter<br></a>
-        <a href="Experience/experience.html">Experience<br></a>
+        <a href="about/profile.html">Profile</a>
+        <a href="CoverLetter/coverletter.html">Cover Letter</a>
+        <a href="Experience/experience.html">Experience</a>
     </head>
     <body>
         <h1>Laura MacKenzie</h1>
