--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Laura MacKenzie CV</title>
         <link rel="stylesheet" href="styles/style.css"/>
-        <a href="index.html">Home<br></a>
+        <a href="index.html">Home</a>
         <a href="about/profile.html">Profile</a>
         <a href="CoverLetter/coverletter.html">Cover Letter</a>
         <a href="Experience/experience.html">Experience</a>
