--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <h3><a href="about/profile.html">Profile</a></h3>
             <p>Highly <a href="#skills">skilled</a> analytical chemist with over five years experience working
                 in laboratories across various elements of the pharmaceutical quality
-                control industry</p>
+                control industry in both chemistry settings a cellular growth.</p>
         <div class="container">
             <h2>Education</h2>
             <div class="uno"><float><h4>National College of Ireland</h4><p>Higher Diploma in Software Development
